2003-10-02  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (setup_local_store): use mbox:/path rather than
	mbox:///path - the mbox code is 'wrong', but this is easier to
	fix.  fixes local unread counts.  maybe the provider url-compare
	should address this too.

2003-09-29  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c: New member local_store in
	MailComponentPrivate.
	(impl_dispose): Unref.
	(mail_component_load_storage_by_uri): Return the CamelStore.
	(setup_local_folder): New.
	(setup_local_store): New.
	(mail_component_init): Call it.
	(mail_component_peek_storage_set): New.
	(mail_component_get_folder_from_evomail_uri): New.
	(mail_component_evomail_uri_from_folder): New.

	* em-folder-selection-button.c: New.
	* em-folder-selection-button.h: New.

	* em-folder-selection.c: New.
	* em-folder-selection.h: New.

	* em-marshal.list: Add NONE:POINTER.

2003-09-25  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-account-gui.c (mail_account_gui_save): Allow any file: uri
	to point to a sent or drafts folder.

2003-09-25  Rodney Dawes  <dobey@ximian.com>

	* mail-send-recv.c: Make the dialog more HIG-compliant by fixing
	widget alignment/spacing issues, and removing separators

2003-09-24  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-preferences.c (mail_preferences_construct): Same as below.

	* mail-composer-prefs.c (mail_composer_prefs_construct): gconf can
	return empty string if the charset has not been set, so if the
	charset string is empty, default the charset to the user's locale
	charset. Partial fix for bug #47638.

2003-09-23  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c (add_storage): Remove unused arg "uri".
	(mail_component_add_store): Likewise.
	(add_storage): Don't set the "Connecting..." node.
	(mail_component_init): Set up local store at
	~/.evolution/mail/local.

	* evolution-mbox-upgrade.c (get_local_store): Remove a double
	xmlFree() that was causing it to crash.


2003-09-23  Ettore Perazzoli  <ettore@ximian.com>
